--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
        
     
     <footer id="short" class="mt-8 bg-white text-black p-4 text-center">
-        <p>版权：<a href="https://github.com/fongmi/tv">@fongmi</a></p>
-        <p>页面由 <a href="https://www.nite07.com">Nite07</a> 制作</p>
+        <p>版权：<a href="https://github.com/fongmi/tv">小班-豆豆</a></p>
+        <p>页面由 <a href="https://www.nite07.com">豆爸</a> 制作</p>
     </footer>
 
 </body>
