--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="container mx-auto flex justify-between py-4 px-8">
     <!-- 左边首页链接 -->
     <a href="/nc/" title="内测版">
-      <img src="http://y.lytv.gq/影视/img/ys.jpg" alt="logo" class="h-6 sm:h-12 lg:h-16">
+      <img src="https://agit.ai/ddys001/box2/raw/branch/master/live/logo.png" alt="logo" class="h-6 sm:h-12 lg:h-16">
     </a>
 
     <!-- 右边导航 -->
@@ -131,8 +131,8 @@
            <a>影視導航：>></a><a href="https://t.me/fongmi_release" target="_blank" title="蜂蜜的影视APP与爬虫jar包发布频道" style="font-size:15px;">TG频道</a>            
                 <a>&nbsp;>></a><a href="https://t.me/fongmi_offical" target="_blank" title="蜂蜜的影视APP官方交流群" style="font-size:15px;">TG群</a>
                 <a>&nbsp;>></a><a href="https://github.com/fongmi/tv" target="_blank" title="蜂蜜的影視APP开源仓库" style="font-size:15px;">仓库</a>
-                <a>&nbsp;>></a><a href="/rz/" target="_blank" title="蜂蜜的影視APP更新日志" style="font-size:15px;">更新日誌</a>
-                <a>&nbsp;>></a><a href="/about.html" target="_blank" title="影視更多介紹" style="font-size:15px;">關於</a>
+                <a>&nbsp;>></a><a href="/rz/" target="_blank" title="蜂蜜的影視APP更新日志" style="font-size:15px;">更新日志</a>
+                <a>&nbsp;>></a><a href="/about.html" target="_blank" title="影視更多介紹" style="font-size:15px;">关于</a>
         </h2>
             </p>
     </div>
