--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="space-x-4" id="navbar">
       <a href="https://nite07.com" class="text-xl font-bold" target="_blank" title="夜哥博客*分享方便你我他">优质软件</a>
       <a href="/jm/#jm" class="transition-all duration-150 text-gray-700 hover:text-blue-500" target="_blank" title="黎歌的接口配置解密和𝓛𝔂创建的短链4位随机服务">解密</a>
-      <a href="https://t.me/tvb_ys" class="transition-all duration-150 text-gray-700 hover:text-blue-500" target="_blank" title="𝓛𝔂创建的影视&TVB相关频道">站长频道</a>
+ <!-- <a href="https://t.me/tvb_ys" class="transition-all duration-150 text-gray-700 hover:text-blue-500" target="_blank" title="𝓛𝔂创建的影视&TVB相关频道">站长频道</a>  -->
       <a href="/about.html" class="transition-all duration-150 text-gray-700 hover:text-blue-500" target="_blank" title="同步骚零的影视介绍">关于</a>
       <!-- 更多按钮 -->
       <button id="moreBtn" class="transition-all duration-150 text-gray-700 hover:text-blue-500">更多</button>
