--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <!-- 左边文字 -->
             <div class="w-full md:w-1/3 p-8 flex flex-col justify-center">
                 <h2 class="text-center text-4xl font-bold mb-4">影视TV</h2>
-                <p class="text-center">软件永久免费使用</p>
+                <p class="text-center">软件永久使用</p>
                 <p class="text-center">支持点播视频投屏</p>
                 <p class="text-center"><a href="/rz/#about"><font color="red">更多功能与操作说明及更新日志</font></a></p>
                 
